<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTex"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="@string/edit_firstname" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_lastname" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_id"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTe"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_address" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_email" />
    </LinearLayout>
</LinearLayout>
</ScrollView>