<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login">

    <TextView
        android:id="@+id/txtheader"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="98dp"
        android:text="Login Application"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_login_facebook"
        android:layout_width="200dp"
        android:layout_height="41dp"
        android:layout_marginRight="8dp"
        android:text="@string/button_singin_facebook"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_google"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="41dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/button_singin"
        android:textColor="@color/cardview_light_background"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:layout_marginTop="270dp"
        app:layout_constraintTop_toBottomOf="@+id/txtheader" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_login_google"
        android:layout_width="200dp"
        android:layout_height="41dp"
        android:text="@string/button_singin_google"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>